welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: Unmatched closing brace '}' ignored here
		} else if ("R") { droite();avance();
                ^BDRBuggle:4: error: illegal start of statement
		} else if ("R") { droite();avance();
                  ^